[package]
name = "windows-grep"
version = "5.0.0"
edition = "2021"

[lib]
name = "windows_grep"
path = "src/lib.rs"

[[bin]]
name = "grep"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
regex = "1"
rayon = "1"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"
pdf-extract = "0.7"
once_cell = "1"
ctrlc = "3"
colored = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "fileapi",
    "consoleapi",
    "processenv",
    "handleapi",
    "winnt",
    "minwinbase",
    "errhandlingapi",
] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
